apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__array.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: doc
---
query {
  topProducts {
    type
    publicReviews {
      body
    }
  }
}

