apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: paths
---
[
    Path(
        [
            Key(
                "itf",
            ),
            Key(
                "id",
            ),
        ],
    ),
]
