apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_fragment.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            name
        }
        
filtered:
query {
  topProducts {
    type
  }
  itf {
    id
  }
}

paths: ["/itf/... on User"]
