apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_typename-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query Anonymous {
            post(id: "1") {
              __typename
              ... on PublicBlog {
                __typename
                title
              }
            }
          }
        
filtered:
query Anonymous {
  post(id: "1") {
    __typename
    ... on PublicBlog {
      __typename
      title
    }
  }
}

paths: []
