apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__named_fragment_nested_in_named_fragment_in_authenticated_type.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query A($v: Int) {
            ... F3
        }

        query B($id:String, $u:Int, $include:Boolean, $skip:Boolean) {
            ... F1
        
            u(u:$u) @include(if: $include)
        }

        fragment F1 on Query {
            t {
                ... F2 @skip(if: $skip)
            }
        }

        fragment F2 on T {
            f(id: $id)
        }

        fragment F3 on Query {
            ...F4
        }

        fragment F4 on Query {
            v(v: $v)
        }
        
filtered:
query A($v: Int) {
  ...F3
}

query B($u: Int, $include: Boolean) {
  u(u: $u) @include(if: $include)
}

fragment F4 on Query {
  v(v: $v)
}

fragment F3 on Query {
  ...F4
}

paths: ["/t"]
